--- a/webapp/view/Index.view.xml
+++ b/webapp/view/Index.view.xml
@@ -1,6 +1,6 @@
 <mvc:View xmlns="sap.m" xmlns:core="sap.ui.core" xmlns:mvc="sap.ui.core.mvc" 
 	xmlns:f="sap.f" xmlns:u="sap.ui.table"
-	xmlns:fb="sap.ui.comp.filterbar" controllerName="com.shunyu.slpack.controller.Index" height="100%">
+	xmlns:fb="sap.ui.comp.filterbar" xmlns:l="sap.ui.layout" controllerName="com.shunyu.slpack.controller.Index" height="100%">
 		<f:DynamicPage headerExpanded="true">
 		
 			<!--第一个主体 标题 查询条件-->
@@ -14,16 +14,15 @@
 			
 			<!--各查询条件输入选择框-->
 			<f:header>
-				<f:DynamicPageHeader>
+				<f:DynamicPageHeader >
 					<f:content>
 						<fb:FilterBar search="onSearch" useToolbar="false" showRestoreButton="false" showClearButton="true"
-							showGoOnFB="true" showFilterConfiguration="false" id="tagfilter">
+							showGoOnFB="true" showFilterConfiguration="false" id="tagfilter" >
 							<fb:filterItems>
 								<!--工厂-->
 								<fb:FilterItem name="werks" label="{i18n>IndexView.werks}">
 									<fb:control>
 										<ComboBox id="s_werks" showSecondaryValues="true" 
-											change="onChangeWerks"
 											selectedKey="{searchModel>/werks}"
 											items="{ path: 'oFactoryList>/results', templateShareable:false }">
 											<core:ListItem key="{oFactoryList>Werks}" text="{oFactoryList>Werks}" additionalText="{oFactoryList>Name1}"/>
@@ -34,11 +33,10 @@
 								<!--仓库-->
 								<fb:FilterItem name="stock"  label="{i18n>IndexView.stock}">
 									<fb:control>
-										<ComboBox id="s_stock" showSecondaryValues="true"
-											change="onChangeFack"
+										<ComboBox id="s_stock" showSecondaryValues="true" 
 											selectedKey="{searchModel>/stock}"
-											items="{ path: 'ofacklist>/results', templateShareable:false }">
-											<core:ListItem key="{ofacklist>Lgort}" text="{ofacklist>Lgort}--{ofacklist>Lgobe}--{ofacklist>Werks}"/>
+											items="{ path: 'oFactoryList>/results', templateShareable:false }">
+											<core:ListItem key="{oFactoryList>Werks}" text="{oFactoryList>Werks}" additionalText="{oFactoryList>Name1}"/>
 										</ComboBox>
 									</fb:control>
 								</fb:FilterItem>
@@ -46,13 +44,11 @@
 								<!--目标仓库-->
 								<fb:FilterItem name="targetStock"  label="{i18n>IndexView.targetStock}">
 									<fb:control>
-									<Input
-										id="s_targetStock"
-										type="Text"
-										value="{targetck>/Lgort}"
-										width="15rem"
-										editable="false"
-										class="sapUiSmallMarginBottom"/>
+										<ComboBox id="s_targetStock" showSecondaryValues="true" 
+											selectedKey="{searchModel>/targetStock}"
+											items="{ path: 'oFactoryList>/results', templateShareable:false }">
+											<core:ListItem key="{oFactoryList>Werks}" text="{oFactoryList>Werks}" additionalText="{oFactoryList>Name1}"/>
+										</ComboBox>
 									</fb:control>
 								</fb:FilterItem>
 								
@@ -76,8 +72,8 @@
 									<fb:control>
 										<ComboBox id="s_mchb" showSecondaryValues="true" 
 											selectedKey="{searchModel>/mchb}"
-											items="{ path: 'oMchblModel>/', templateShareable:false }">
-											<core:ListItem key="{oMchblModel>Charg}" text="{oMchblModel>Charg}" />
+											items="{ path: 'oFactoryList>/results', templateShareable:false }">
+											<core:ListItem key="{oFactoryList>Werks}" text="{oFactoryList>Werks}" additionalText="{oFactoryList>Name1}"/>
 										</ComboBox>
 									</fb:control>
 								</fb:FilterItem>
@@ -88,9 +84,8 @@
 			</f:header>
 			
 			<f:content>
-				<u:Table id="table" selectionMode="Single" visibleRowCount="15" rowActionCount="1" 
-                        rows="{path: 'oKcmxList>/kcmxlist'}" ariaLabelledBy="title" class="custTable"
-						>
+				<u:Table id="table" selectionMode="MultiToggle" visibleRowCount="10" rowActionCount="1" 
+                        rows="{path: 'ship>/ZSY_QM22_I1Set'}" ariaLabelledBy="title" class="custTable">
                     <u:extension>
                         <OverflowToolbar>
                             <content>
@@ -100,8 +95,8 @@
                                     visible="{/otherEditable}"
                                     tooltip="{i18n>IndexView.btnEdit}"
 									type="Emphasized"
-									text="{i18n>IndexView.btnEdit}"
-									press="onEditBq"/>
+                                    press="onAddItem" 
+									text="{i18n>IndexView.btnEdit}"/>
                             </content>
                         </OverflowToolbar>
                     </u:extension>
@@ -109,32 +104,45 @@
                         <u:Column>
                             <Label text="物料编号" />
                             <u:template>
-                                <Text text="{oKcmxList>Matnr}">
-								</Text>  
+                                <Input  
+                                    editable="{/otherEditable}"
+                                    type="Text"
+                                    value="{ship>Zmxbh}"		
+                                    showValueHelp="true"
+                                    valueHelpOnly="true"
+                                    valueHelpRequest="handleValueHelp3">
+                                    <layoutData>
+                                        <l:GridData span="XL2 L2 M4 S8" />
+                                    </layoutData>
+                                </Input>
                             </u:template>
                         </u:Column>
                         <u:Column>
                             <Label text="物料名称" />
                             <u:template>
-								<Text text="{oKcmxList>Maktx}">
-								</Text>  
+                                <Input value="{ship>Zmxmc}" editable="{/otherEditable}"/>
                             </u:template>
                         </u:Column>
                         <u:Column>
                             <Label text="数量" />
                             <u:template>
-								<Text text="{oKcmxList>Clabs}">
-								</Text>  
+                                <TextArea value="{ship>Zjcbzms}" editable="{/otherEditable}" width="100%"/>
                             </u:template>
                         </u:Column>
                         <u:Column>
                             <Label text="批次"/>
                             <u:template>
-								<Text text="{oKcmxList>Charg}">
-								</Text>  
+                                <Input value="{ship>Zxsbz}" editable="{/otherEditable}"/>
                             </u:template>
                         </u:Column>       
                     </u:columns>
+                    <u:rowActionTemplate>
+                        <u:RowAction visible="{/otherEditable}">
+                            <u:items>
+                                <u:RowActionItem icon="sap-icon://decline" text="{ship>Zzxxh}" type="Delete" press="onDeleteItem2"></u:RowActionItem>
+                            </u:items>
+                        </u:RowAction>
+                    </u:rowActionTemplate>
                 </u:Table>
 			</f:content>
 		</f:DynamicPage>
